--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,15 @@ body {
   transition: width 0.5s ease;
 }
 
+footer {
+  border-top: 1px solid #333;
+  font-size: 0.9rem;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
 /* Responsive fix */
 @media (max-width: 576px) {
   .navbar-nav {
